fix spacing

--- a/app/styles/components/_navigation.scss
+++ b/app/styles/components/_navigation.scss
@@ -260,7 +260,7 @@ nav {
 				}
 				@include breakpoint(large up) {
 					width:55%;
-					margin-left:65px;
+					padding-left:65px;
 				}
 				.topbar-icons-wrapper {
 					display:block;
